# kinesis

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
kinesis/: __main__.py  index.html  index.js  main.css
