[project]
name = "kinesis"
dynamic = ["version"]
requires-python = ">=3.11.0"
dependencies = ["pymobiledevice3<3", "python-socketio", "eventlet"]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
kinesis = "kinesis.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.ruff]
line-length = 150

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pymobiledevice3.*", "eventlet.*", "socketio"]
ignore_missing_imports = true
